[package]
name = "discord-rcon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = "0"
toml = "0.5"
async-std = "1"
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = [ "derive" ] }

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["builder", "client", "gateway", "model", "http", "utils", "rustls_backend"]
