[package]
name = "discord-rcon"
version = "0.1.7-SNAPSHOT"
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "The discord bot to control game servers via rcon."
repository = "https://github.com/anatawa12/discord-rcon"
authors = ["anatawa12 <anatawa12@icloud.com>"]

categories = ["games"]
keywords = ["rcon", "discord", "bot", "rcon", "minecraft"]
include = [
    "src/**",
    "Cargo*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = "0"
toml = "0.5"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = [ "derive" ] }

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["builder", "client", "gateway", "model", "http", "utils", "rustls_backend"]
